@@ -14,6 +14,9 @@
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Made the Open and Save dialogs resizable (only supported on Windows 98,
+          - Windows 2000, and higher).
+
 * [DanielPharos]: Prevent hotkeys from triggering functions when the corresponding menu item
           - is disabled.
 
